# pcl_tool

./: .gitignore  CMakeLists.txt  area_pick.cpp  normal_estimation.cpp  ply_to_pcd.cpp  template_alignment copy.cpp  trajectory_cloud_extract.cpp  txt_to_pcd.cpp
3rdlib/include/: get_final_result.h
3rdlib/include/RansacLib/: ransac.h
data/: Area_4_IPIP_1meika_chargingPort_pred.ply  area_4_ipip_1meika_chargingPort_pred.pcd  mech_modle1.ply  object_templates_mech.txt  trans_poincloud_mech_model.pcd
data/p3d2d/: K.txt  center.txt
data/pcd/icp_process/: 162755.pcd  162755_trans.pcd  162807.pcd  chargePortCLoud.pcd  eletre.pcd
data/pcd/model/: 2.pcd
include/: INIReader.cpp  SDK_common_define.h  icp_process.h  ini.h  ncnn_c_sdk_common.h  ncnn_common_utils.cpp  ncnn_common_utils.h  ncnn_yolov5.h  so_test.h  string_utils.cpp  string_utils.hpp  types.h  yolov5s_ncnn_sdk.h
src/: alignment_prerejective.cpp  area_pick.cpp  charger_process.cpp  corss.cpp  euclidean_seg.cpp  glog_test.cpp  icp.cpp  icp_p_plane.cpp  icp_process.cpp  icp_test.cpp  model_trans.cpp  normal_estimation.cpp  pcd_to_txt.cpp  pcs.cpp  ply_to_pcd.cpp  randam.py  ransac_registration.cpp  region_growing_segmentation.cpp  resampling.cpp  so_test_main.cpp  sqpnplib_test.cpp  stl_to_pcd.cpp  template_alignment.cpp  xyz_to_pcd.cpp
ster/: CMakeLists.txt  README.md  rebuild.sh
ster/3rdlib/include/: robust_pose_pnp.h  sqpnp.h  types.h
ster/3rdlib/include/RansacLib/: sampling.h
ster/config/: charger.ini
ster/data/logs/main_charger/: UNKNOWN.INFO
ster/include/ahpc_vision/: INIReader.h  SDK_common_define.h  ahpc_detector.h  ncnn_c_sdk_common.h
ster/include/jaka/: jaka_move_interface.hpp  pose_trans.hpp  soft_inserter_interface.hpp
ster/include/mvg-pc-generator/: system.h  tracking.h  types.h
ster/include/mvg-pc-generator/camera/: perspective.h
ster/include/mvg-pc-generator/solve/: blind_pnp.h  icp_solver.h  pnp_solver.h  soft_posit.h
ster/include/mvg-pc-generator/util/: pose_trans.h  stereo_rectifier.h  trigonometric.h  yaml.h
ster/include/ncnn/: platform.h
ster/libs/mvg-pc-generator/: libyaml-cpp.so.0.7.0
ster/models/charger/: GB_charger_DC.pcd  GB_charger_selected_1_9.pcd  GB_charger_selected_1_9_offset.pcd  eletre_selected.pcd  eletre_selected_offset.pcd
ster/robot/jaka/include/jaka_api/: JAKAZuRobot.h  jktypes.h
ster/test/: g2o_types.h  get_final_result.cpp  main_charger.cpp
until/: PL.tex  common_until.cpp  tesd.wsd
